@@ -1,6 +1,7 @@
 package com.game;
 
 import com.badlogic.gdx.Gdx;
+import com.badlogic.gdx.graphics.Color;
 import com.badlogic.gdx.graphics.Texture;
 import com.badlogic.gdx.graphics.g2d.BitmapFont;
 import com.badlogic.gdx.graphics.g2d.freetype.FreeTypeFontGenerator;
@@ -18,15 +19,20 @@ public enum Fonts {
     Fonts(String filePath) {
         this.generator = new FreeTypeFontGenerator(Gdx.files.internal(filePath));
         parameter = new FreeTypeFontParameter();
+
+        parameter.genMipMaps = true;
+        parameter.minFilter = Texture.TextureFilter.MipMapLinearLinear;
         parameter.magFilter = Texture.TextureFilter.Linear;
-        parameter.minFilter = Texture.TextureFilter.Linear;
+
+        parameter.borderWidth = 1f;
+        parameter.borderColor = Color.BLACK;
     }
 
     public BitmapFont getFont(int size) {
         if (fontCache.containsKey(size)) {
             return fontCache.get(size);
         }
-        size = Math.max(1, Math.min(size, 256));
+        size = StrictMath.clamp(size, 1, 256);
 
         parameter.size = size;
         BitmapFont newFont = generator.generateFont(parameter);
